# jaai_hub-custom_api

./: .env-template  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  docker-compose.yaml  env_template  pyproject.toml
custom_api/: Dockerfile  pyproject.toml
custom_api/src/custom_api/: __init__.py  authentication.py  main.py
custom_api/src/custom_api/llm/: __init__.py  recipe.py
custom_api/src/custom_api/routers/: healthcheck.py  recipe.py
frpc/: Dockerfile  entrypoint.sh  frpc-dashboard.toml  run_frpc.sh
mcp/: Dockerfile  pyproject.toml
mcp/src/mcp/: __init__.py
mcp_server/: Dockerfile  pyproject.toml
mcp_server/src/mcp_server/: __init__.py  authentication.py  main.py  utils.py
src/image-creator/: image_creator.py  main.py
